# incredible

./: .gitignore  CHANGELOG.md  LICENSE  README.md  api-spec.json  flake.nix  incredible.cabal
app/: Main.hs
client/: babel.config.json  comic.json  eslint.config.js  package-lock.json  package.json  prettier.config.mjs  tsconfig.json  webpack.config.js
client/loaders/: comic-image-loader.js
client/src/: api.ts  custom.d.ts  image.d.ts  index.ejs  index.tsx  types.ts
client/src/components/: BallPitMechanism.tsx  CenteredSlippyMap.tsx  Comic.tsx  ComicBrowseView.tsx  ComicImage.tsx  ComicPuzzleView.tsx  DebugOverlay.tsx  EditorTutorials.tsx  FullscreenComicContainer.tsx  InnerComicBorder.tsx  LoadingSpinner.tsx  MachineContext.tsx  MachineTileContext.tsx  MachineTileEditor.tsx  MachineTilePlaceholder.tsx  MetaMachineView.tsx  NamePrompt.tsx  PhysicsContext.tsx  SwooshyDialog.tsx  WidgetPalette.tsx  constants.tsx  positionStyles.ts  useLocationHashParams.tsx  useMetaMachineClient.ts
client/src/components/moderation/: BlueprintButton.tsx  ContextGridForMachineAt.tsx  LiveMachinePreview.tsx  ModMachineTileView.tsx  ModTileInputOutputView.tsx  Moderator.tsx  SelectTileForm.tsx  interestingWeights.ts  modTypes.d.ts  modUtils.ts  moderatorClient.ts
client/src/components/widgets/: Anvil.tsx  AttractorRepulsor.tsx  BallStand.tsx  Balls.tsx  Board.tsx  Boat.tsx  BottomChute.tsx  BottomPit.tsx  BottomTank.tsx  Brick.tsx  CatSwat.tsx  CircleGauge.tsx  Cup.tsx  Cushion.tsx  Fan.tsx  Hammer.tsx  Hook.tsx  InputOutput.tsx  LeftBumper.tsx  MachineFrame.tsx  OutputValidator.tsx  Prism.tsx  QuantumGate.tsx  RightBumper.tsx  RoundBumper.tsx  SpawnInput.tsx  Sticker.tsx  Sword.tsx  Wheel.tsx  index.tsx
client/src/components/widgets/lib/: ball.ts  lineCuboid.ts
client/src/lib/: coords.ts  snapshot.tsx  tiles.tsx  utils.ts
client/src/page/: demo-editor.tsx  demo-map.tsx  demo-viewer.tsx  moderator.tsx  page.ejs
client/src/page/fixtures/: demoMachine.tsx  emptyMachine.tsx
config/: incredible.toml  machine.json
docs/: Main.hs
nix/: deploy.nix  incredible-cfg.nix  incredible-digital-ocean.nix  incredible-frontend.nix  incredible-qemu.nix  incredible-server.nix
nix/digital-ocean/: digital-ocean-config.nix  digital-ocean-custom-image.nix  make-single-disk-zfs-image.nix
nix/profiles/: staging.nix
nix/users/: deploy.nix
src/Incredible/: API.hs  AntiEvil.hs  App.hs  Config.hs  Data.hs  DataStore.hs  Puzzle.hs
src/Incredible/DataStore/: Memory.hs  Redis.hs
test/: Main.hs
