cabal-version:      3.0
name:               incredible
version:            0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             tolt
maintainer:         kevincotrone@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common deps
  default-language: Haskell2010
  ghc-options: -O2
  build-depends:
    , aeson
    , async
    , array
    , base >=4.12 && < 4.20
    , bcrypt
    , binary
    , bitvec
    , bytes
    , bytestring
    , containers
    , crypton
    , crypton-x509-system
    , data-default
    , deepseq
    , directory
    , exceptions
    , extra
    , filepath
    , hashable
    , hedis
    , http-types
    , indexed-traversable
    , lens
    , lrucache
    , mtl
    , monad-loops
    , optparse-applicative
    , process
    , random
    , safe
    , servant
    , servant-multipart
    , servant-server
    , stm
    , temporary
    , text
    , tls
    , time
    , toml-parser
    , transformers
    , unordered-containers
    , uuid
    , vector
    , wai
    , wai-cors
    , wai-extra
    , warp

library
    import:           warnings, deps
    exposed-modules:
      Incredible.AntiEvil
      Incredible.API
      Incredible.App
      Incredible.Config
      Incredible.Data
      Incredible.DataStore
      Incredible.DataStore.Memory
      Incredible.DataStore.Redis
      Incredible.Puzzle
    hs-source-dirs:   src

executable incredible-server
    import:           warnings, deps
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: incredible
    hs-source-dirs:   app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

executable incredible-docs
    import:           warnings, deps
    main-is:          Main.hs
    hs-source-dirs:   docs
    build-depends: incredible
                 , servant-openapi3
                 , openapi3
                 , insert-ordered-containers

executable incredible-gen
    import:           warnings, deps
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   Gen
    default-language: Haskell2010
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N
    build-depends: incredible

test-suite incredible-test
    import:           warnings, deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
          incredible
        , async
        , hedgehog
        , tasty
        , tasty-hedgehog
        , uuid-types
